fixed header and footer bg color also fixed spacing

--- a/Content/admin_assets/css/style.css
+++ b/Content/admin_assets/css/style.css
@@ -799,7 +799,7 @@ b, strong{
     display: flex;
     height: 74px;
     background-color: rgba( 248,249,250, 0.7);
-    background: #fff;
+    background: #704368;
     --tw-text-opacity: 1;
     color: rgb(91 107 121 / var(--tw-text-opacity));
     --tw-backdrop-blur: blur(7px);
@@ -851,6 +851,7 @@ b, strong{
   border-radius: 0.5rem;
   --tw-text-opacity: 1;
   color: rgb(91 107 121 / var(--tw-text-opacity));
+  color: #fff
 }
 .pc-header .pc-head-link::after{
   position: absolute;
@@ -870,13 +871,13 @@ b, strong{
   --tw-content: "" !important;
   content: var(--tw-content) !important;
 }
-.pc-header .pc-head-link:hover::after{
+/*.pc-header .pc-head-link:hover::after{
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   content: var(--tw-content);
   border-radius: 0.25rem;
-}
+}*/
 .pc-header .pc-head-link:is([data-pc-theme="dark"] *)::after{
   content: var(--tw-content);
   --tw-bg-opacity: 1;
@@ -948,7 +949,7 @@ b, strong{
 }
 @media (min-width: 640px){
   .pc-header .dropdown-menu.dropdown-user-profile{
-    min-width: 352px;
+    min-width: 152px;
   }
 }
 .pc-header .dropdown-menu.dropdown-user-profile .dropdown-item{
@@ -1047,8 +1048,8 @@ b, strong{
   display: block;
   padding-left: 23px;
   padding-right: 23px;
-  padding-top: 1.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 1rem;
+  padding-bottom: 0.2rem;
   font-size: 11px;
   font-weight: 600;
   text-transform: uppercase;
@@ -1277,8 +1278,8 @@ b, strong{
   }
 }
 .page-header{
-  margin-bottom: 1.5rem;
-  padding-top: 13px;
+  margin-bottom: 1rem;
+  padding-top: 1px;
   padding-bottom: 13px;
 }
 @media not all and (min-width: 640px){
@@ -1294,8 +1295,8 @@ b, strong{
   position: relative;
   z-index: 995;
   margin-top: 74px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   transition-property: all;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -2376,7 +2377,7 @@ text:is([data-pc-theme="dark"] *),.apexcharts-theme-light .apexcharts-menu-icon:
   padding-left: 1rem;
   padding-right: 1rem;
   text-align: center;
-  font-size: 0.875rem;
+  font-size: 0.775rem;
   font-weight: 500;
   transition-property: all;
   transition-duration: 200ms;
@@ -5075,11 +5076,17 @@ button.swal2-styled:focus{
 }
 .table > :not(caption) > * > *{
   /*white-space: nowrap;*/
-  padding: .7rem .75rem;
+  padding: .5rem .75rem;
 }
-.table thead{
-  background-color: rgba(248,249,250,0.5);
-  vertical-align: bottom;
+.mr-up {
+    margin-top: -20px
+}
+.header-logo {
+    background: #704368
+}
+.table thead {
+    background-color: rgba(248,249,250,0.5);
+    vertical-align: bottom;
 }
 .table thead:is([data-pc-theme="dark"] *){
   --tw-bg-opacity: 1;
@@ -5091,7 +5098,7 @@ button.swal2-styled:focus{
   --tw-border-opacity: 1;
   border-top-color: rgb(231 234 238 / var(--tw-border-opacity));
   border-bottom-color: rgb(231 234 238 / var(--tw-border-opacity));
-  padding: .7rem .65rem;
+  padding: .5rem .65rem;
   vertical-align: middle;
   font-size: 11px;
   text-transform: uppercase;
@@ -8978,7 +8985,7 @@ table.\!dataTable thead tr >.dtfc-fixed-start:is([data-pc-theme="dark"] *),table
   padding: 1rem !important;
 }
 .\!p-5{
-  padding: 1.25rem !important;
+  padding: 0.75rem 1.25rem !important;
 }
 .\!p-\[12px_30px\]{
   padding: 12px 30px !important;
@@ -13357,14 +13364,15 @@ table.\!dataTable thead tr >.dtfc-fixed-start:is([data-pc-theme="dark"] *),table
 
 .breadcrumb {
     float: right !important;
-    margin-top: -10px
+    margin-top: -28px
 }
 .box-design {
-    padding: 20px;
+    padding: 10px 15px;
     background: #fff;
     border-radius: 10px;
     border: 1px solid #E7EAEE;
-    margin-top: -25px
+    margin-top: -25px;
+    margin-bottom: 15px
 }
 .flex-row {
     display: flex;
@@ -13452,4 +13460,14 @@ textarea {
 }
 body {
     overflow-x: hidden
+}
+
+.orange-bg {
+    color: #FFBEAF;
+}
+.green-bg {
+    color: #C4FFDD
+}
+.blue-bg {
+    color: #DBF1FF
 }
